modules/home/home.less
.container {
    height: 100%;
}

.angular-google-map-container {
    width: 100%;
    height: 100%;
}

.angular-google-map {
    width: 100%;
    height: 70%;
    position: relative;
    margin-bottom: 80px;
}
/*title*/
h1{
    font-family: @main-font;
    color: @main-color-2;
}

h4{
    font-family: @main-font;
}

a {
    text-decoration: none;
    color: @main-color-2;
}

a:hover {
    text-decoration: none;
    color: @main-color-3;
}

.input-group-btn-fix {
    margin-top: -5px;
}

